tests/purs/failing/ClassHeadNoVTA2.out
Error found:
in module [33mMain[0m
at tests/purs/failing/ClassHeadNoVTA2.purs:10:9 - 10:17 (line 10, column 9 - line 10, column 17)

  No type class instance was found for
  [33m               [0m
  [33m  Main.Multi t0[0m
  [33m             t1[0m
  [33m               [0m
  The instance head contains unknown type variables.

  Note: The following type class members found in the expression require visible type applications to be unambiguous (e.g. [33mtyClassMember @Int[0m).
    [33mMain.useMulti[0m
      tyNotAppearInBody, norThisOne

while checking that type [33mforall (t20 :: Type) (t21 :: Type) (@tyNotAppearInBody :: t20) (@norThisOne :: t21). Multi @t20 @t21 tyNotAppearInBody norThisOne => Int[0m
  is at least as general as type [33mInt[0m
while checking that expression [33museMulti[0m
  has type [33mInt[0m
in value declaration [33mmulti[0m

where [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

